FTL should implement InvalidationPoint in terms of llvm.stackmap https://bugs.webkit.org/show_bug.cgi?id=113647

Reviewed by Mark Hahnenberg.

This is pretty straightforward now that InvalidationPoint has exactly the semantics
that agree with llvm.stackmap.

* ftl/FTLCompile.cpp:
(JSC::FTL::fixFunctionBasedOnStackMaps):
* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::compileInvalidationPoint):
(JSC::FTL::LowerDFGToLLVM::emitOSRExitCall):
(JSC::FTL::LowerDFGToLLVM::buildExitArguments):
(JSC::FTL::LowerDFGToLLVM::callStackmap):
* ftl/FTLOSRExitCompilationInfo.h:
(JSC::FTL::OSRExitCompilationInfo::OSRExitCompilationInfo):



Canonical link: https://commits.webkit.org/141763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158402 268f45cc-cd09-0410-ab3c-d52691b4dbfc